--- a/package.json
+++ b/package.json
@@ -9,9 +9,22 @@
   "author": "Edward Velasquez",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.5.0",
     "body-parser": "^1.18.1",
+    "cloudinary": "^1.9.0",
+    "connect-flash": "^0.1.1",
+    "dotenv": "^4.0.0",
     "ejs": "^2.5.7",
     "express": "^4.15.4",
-    "mongoose": "^4.11.12"
+    "express-session": "^1.15.6",
+    "geocoder": "^0.2.3",
+    "method-override": "^2.3.10",
+    "moment": "^2.19.1",
+    "mongoose": "^4.11.12",
+    "multer": "^1.3.0",
+    "nodemailer": "^4.3.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.2.1"
   }
 }
