--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Yelp Camp App",
   "main": "app.js",
   "scripts": {
+    "start": "Node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Edward Velasquez",
